--- a/序章1.md
+++ b/序章1.md
@@ -26,6 +26,8 @@
 
 >所以，坐什么车？走路吧！”
 
+网络有一句用语很好的回答了这种现象——“做个人吧！”，所以说好好的正常的生活不好吗？为什么活的那么累，为什么要幻想出那么多条条框框，别人累，自己也累。
 
 
+在微博上流行一句话叫“让瓜飞一会儿”，主要原因是这些年大家吃瓜之后被反转的太多了，有些造成了非常恶劣的社会舆论，甚至还有大V们集体道歉的事件等等。一次又一次的教训告诉大家我们根本没法一下子看清楚事情的全貌，不要轻易的去下结论带节奏。当然网络暴力人群就不同了，他们根本就不关心事情的真相，只以攻击别人为乐，事件节奏越乱他们越开心。网络暴力已经成为了当今作恶成本最低也是最常见的手段了。
 
