--- a/序章2.md
+++ b/序章2.md
@@ -4,4 +4,4 @@
 
 如果你就在一个公司里好好工作，日常面对有限的同事，聊聊工作，公司家庭两点一线，那么除了碰见一些让人讨厌的同事以外，大概率剩下就是岁月静好了。这并没有什么不好，每个人都是选择自己想活成的样子。但如果哪一天你突然做了一个梦，决定要走出自己的小圈子，想出去看看，多做点自己想做的事情，让自己经历的更多，那么恭喜你，至少这样是我认为更有意义的人生。相对的，我也会很担忧，因为这是你真正理解“多做多错”的开始。
 
-走出小圈子意味着你要面对的声音更多，人的本性是想寻求认同感的，潜意识会想尝试弄明白为什么他会不认同自己，尝试去说服对方认同自己。当不同的声音一下子很多，你会发现一些人根本理解不了你的想法，一些人虽然不认识自己但好像很仇视自己，还会辱骂你，还有一些人义正言辞的在说歪理等等。随着时间的推移，你就会开始怀疑自己，心理压力会越来越大，网络带来的压力会蔓延到你所在的现实生活，侵蚀你的感情、生活、家庭甚至健康。我们在网络上经常会看到有的人在微博上定时发自己的遗言，那个时候我们根本就理解不了这些人的想法，活着不好吗？有什么坎儿是过不去的？只要活着一切才有意义。但当我们自己从岁月静好一下子面对那么多不同声音的时候，一般都会自己钻牛角尖。有的人会选择回到自己曾经的岁月静好，但有的人就会继续去承受这些压力。后者与前者的差别就在于后者野心更大，要的更多，要的更多这点非常重要，一定要记住，要的更多意味着你承受的风险、压力、伤害也就越多。长时间加上来自于网络人群的否定，原本岁月静好的人势必会自我否定价值，就很容易做出一些极端的行为。如果你看到这里觉得自己不会，这并不代表你不是这样的人
+走出小圈子意味着你要面对的声音更多，人的本性是想寻求认同感的，潜意识会想尝试弄明白为什么他会不认同自己，尝试去说服对方认同自己。当不同的声音一下子很多，你会发现一些人根本理解不了你的想法，一些人虽然不认识自己但好像很仇视自己，还会辱骂你，还有一些人义正言辞的在说歪理等等。随着时间的推移，你就会开始怀疑自己，心理压力会越来越大，网络带来的压力会蔓延到你所在的现实生活，侵蚀你的感情、生活、家庭甚至健康。我们在网络上经常会看到有的人在微博上定时发自己的遗言，那个时候我们根本就理解不了这些人的想法，活着不好吗？有什么坎儿是过不去的？只要活着一切才有意义。但当我们自己从岁月静好一下子面对那么多不同声音的时候，一般都会自己钻牛角尖。有的人会选择回到自己曾经的岁月静好，但有的人就会继续去承受这些压力。后者与前者的差别就在于后者野心更大，要的更多，要的更多这点非常重要，一定要记住，要的更多意味着你承受的风险、压力、伤害也就越多。长时间加上来自于网络人群的否定，原本岁月静好的人势必会自我否定价值，就很容易做出一些极端的行为。如果你看到这里觉得自己不会，这并不代表你不是这样的人，只是因为你还没有陷在这样的漩涡中。
