--- a/996篇.md
+++ b/996篇.md
@@ -18,3 +18,15 @@
 ---
 虽然我无法确认最大的受益者是谁，但我知道996带来的是非常大的电能消耗。996从本质来讲根本就不存在什么受益者，所有的人都是这样一个浪潮下的牺牲者。
 
+>员工群体A：日常并不喜欢加班，同时并不会留有太多没有完成的工作，但被迫留下来和大家一起加班，否则就会被戴上“不合群”，“价值观不好”的帽子。加班的时候一般没有额外的工作去做，每天无奈的拿着加班餐，然后准时的呼叫免费的企业滴滴回家。
+
+>员工群体B：他们无论单身与否都很喜欢一个人的时间和自由，下班了也不愿意回家。996制度的兴起给了一个天然的不回去的理由。他们并不在乎是否真的有更多的工作让自己做，有的在工作，有的在玩游戏，有的在看剧，甚至还可以有一些额外的感情生活。
+
+>员工群体C：他们是996真正的劳动者，连续加班到深夜。默默的承受了巨大的工作量和压力，有些还顺带着家庭矛盾和疾病。
+
+我们在平时在讨论996的时候往往都不是真正的“受益者”或“受害者”，一方面他们根本没空在网络上到处抱怨和讨论，另外一方面从性格比例来讲，“受害者”们逆来顺受，优柔寡断的比例较高。很多时候身在其中的人会去反感自己的领导和老板，但其实996的本质并不在这里，这仅仅是我们的认知给我们造成的假象。
+
+我们假设员工的人物画像是日常打一份工拿一份工资，每天就是例行上班下班，主观能动性差。说到这里可能一些读者不服气，认为自己就不是这样的员工，但任何事情都有两面性，努力工作和每天划水的员工总是一半一半的。根据我们刚刚的假设，那么谁来对每个员工的工资，整个公司的运作，法律风险、盈利等等来负责呢？那肯定就是公司创始人了，也就是我们说的创业者。其实很多创业者往往本身都不是面面俱到的，尤其是团队管理方面的能力缺乏会比较严重。同时中国的创业者都会有一种莫名的共识，那就是对成功的人士和公司有着迷之喜爱。无论在技术、管理还是人员评估（KPI或者ORK）上都喜欢用“BATJ等公司都在这样做，我们必须这样做”来说服员工来效仿，996也是如此。但很多创业者对这些大公司的东西的理解都停留在表面，却看不到本质。认为别人成功了这样做，自己照样做也能够成功。
+
+我个人说下对大公司做“996”的理解吧
+>“进入移动互联网之后，软件项目的迭代速度和节奏变得越来越快。大公司首当其冲的感受到了大浪潮带来的紧迫感。996的本质其实是要让大家在一段时间内神经紧绷，集中式的闭关攻克某些技术难题或者开发新产品，这其实是完全符合移动互联网或者说这个时代的发展。但历史永远都是相似的，企业和老板都愿意无脑模仿成功者，然而拷贝永远都是走样的。慢慢的996就变成了一种形式，一种过场，一种强制性的无偿加班行为。大部分企业学会了996，却没有明白自己为什么要996。也许大公司这样做是自己这样做的唯一原因，好像自己企业996了之后就朝成功迈进了一步。
