--- a/996篇.md
+++ b/996篇.md
@@ -30,3 +30,31 @@
 
 我个人说下对大公司做“996”的理解吧
 >“进入移动互联网之后，软件项目的迭代速度和节奏变得越来越快。大公司首当其冲的感受到了大浪潮带来的紧迫感。996的本质其实是要让大家在一段时间内神经紧绷，集中式的闭关攻克某些技术难题或者开发新产品，这其实是完全符合移动互联网或者说这个时代的发展。但历史永远都是相似的，企业和老板都愿意无脑模仿成功者，然而拷贝永远都是走样的。慢慢的996就变成了一种形式，一种过场，一种强制性的无偿加班行为。大部分企业学会了996，却没有明白自己为什么要996。也许大公司这样做是自己这样做的唯一原因，好像自己企业996了之后就朝成功迈进了一步。
+
+
+瘟疫
+---
+
+我很庆幸自己做了自媒体，让我接触到了更多的创业者和各色各样的人。在当下996式加班制度下最痛苦的莫过于一类人，这类人本性非常善良，做事极其负责，任何问题第一时间总是先找自己的问题，他们不是不会变通，而是这种无意义的加班不符合他们的价值观。越对自己负责的人越容易钻牛角尖，在我看来这类人很难在这样野蛮的环境下生存。
+
+996带来的不仅仅是高强度的加班，更是一种拔苗助长。玩游戏打怪兽都是一级一级去打，越级去打只会Game Over。在现实中，虽然我们不会Game Over，但带来的更多的是心理上的负担。我不止一次的听到身边的朋友和我说公司强制让自己在短短一两周内完成某些遥不可及的目标，有的还会用辞退或者扣奖金的方式来威胁，美名其曰大公司都这样。有的人会直接说我做不了，或者时间不够，但很可惜的是这个世界上大多数人在这种情况下都会选择默默的承受下来，毕竟不可能在没有尝试过的情况下就选择放弃。但往往经过一段时间的尝试之后发现根本无法在预定时内完成任务的时候，他们就会有“怎么办，完不成我就要失去这份工作了“，“怎么办，我怎么那么差，为什么这些都完不成”等等类似的想法。一般他们往往没有能力去评估这个目标与自己能力之间的距离，所以当完不成的时候容易对信心造成很大的打击。当然他们的老板也没有这个能力，但却有施加压力的权利。
+
+996就如同一场瘟疫迅速的在互联网中蔓延开来，对人心理上造成的创伤才是这场疾病最致命的杀伤力。这让我想到了刚看完的迷你剧“切尔诺贝利”，在剧中人们和高层由于缺乏对于科学知识的认知而对辐射这样无形的杀手无动于衷，大家在飘着辐射灰烬的空气下聊天、跳舞，最终酿成惨剧。在当下社会，各种心理疾病其实和这些辐射带来的伤害一样。在996的背后有太多ICU、孕妇流产等带血故事，也许每个时代每个产业在发展中的时候都会有牺牲，可惜我无从考究，但我知道这一切仅仅只是一个开始。
+
+在这场瘟疫爆发的几年后我突然发现它竟然从幕后走到了台前。随着时间的推移，在越来越多的招聘信息上看到了人才需求是能够接受996，接受最低基数缴纳五险一金，接受大小周（大小周的意思就是每隔一周996）。很多HR会理直气壮的和候选人说自己公司是996，创业都有加班文化。这场瘟疫从一个疾病慢慢的变成了一种文化，一种骄傲，一种正面的压榨劳动力的手段，令人瞠目结舌。
+
+透过996看本质的话，我们不难发现其实996的现象一直都存在，只不过在互联网这样一个行业里被放大了爆发了出来。主要原因在于
+
+* 互联网发展太快，并没有太多的规范、制度等等来做约束
+* 互联网的从业人员都偏年轻化，更懂得如何将信息在互联网上进行传播，这样也让更多的人感受到了996就在自己身边
+
+996的终局
+---
+
+其实关于最终的发展不用猜现在已经看得很清楚了，996、007基本变成了互联网企业的标配。企业将这些变成了默认的规定，员工也被动的默认接受了这样的设定，就好像一直都是这样。996整个事件的发展告诉我们：
+  
+* 只要有足够多的大公司遵循某些制度，哪怕并没有非常符合劳动法，那么就会变成一种默认的制度在整个行业推广开来
+* 只要有足够多的人去接受这样的制度，哪怕企业没有给出对等的休假或者工资上的补贴，那么就会默默的遵守
+* 只要这个制度持续的时间足够长，哪怕核心本身就不合理，那么也会成为未来越来越多的企业的标准，就好像真理一样一直存在着
+
+就如之前所说的，996只不过千千万万扭曲的一种，我们要重视或抵制的并不是996，而是上面谈到的类似于996这样的事件。在社会发展中，势必会有各种“不平等”规定出现。但如果一直都没有改变，每一件都像996事件一样，最终变成了一种默认的规范的话，那最终只会是一个恶性循环，终究有一天会让积蓄的负面情绪一次性爆发出来的，真的到了那个时候，可能就一发不可收拾了。
