--- a/996篇.md
+++ b/996篇.md
@@ -29,7 +29,9 @@
 我们假设员工的人物画像是日常打一份工拿一份工资，每天就是例行上班下班，主观能动性差。说到这里可能一些读者不服气，认为自己就不是这样的员工，但任何事情都有两面性，努力工作和每天划水的员工总是一半一半的。根据我们刚刚的假设，那么谁来对每个员工的工资，整个公司的运作，法律风险、盈利等等来负责呢？那肯定就是公司创始人了，也就是我们说的创业者。其实很多创业者往往本身都不是面面俱到的，尤其是团队管理方面的能力缺乏会比较严重。同时中国的创业者都会有一种莫名的共识，那就是对成功的人士和公司有着迷之喜爱。无论在技术、管理还是人员评估（KPI或者ORK）上都喜欢用“BATJ等公司都在这样做，我们必须这样做”来说服员工来效仿，996也是如此。但很多创业者对这些大公司的东西的理解都停留在表面，却看不到本质。认为别人成功了这样做，自己照样做也能够成功。
 
 我个人说下对大公司做“996”的理解吧
->“进入移动互联网之后，软件项目的迭代速度和节奏变得越来越快。大公司首当其冲的感受到了大浪潮带来的紧迫感。996的本质其实是要让大家在一段时间内神经紧绷，集中式的闭关攻克某些技术难题或者开发新产品，这其实是完全符合移动互联网或者说这个时代的发展。但历史永远都是相似的，企业和老板都愿意无脑模仿成功者，然而拷贝永远都是走样的。慢慢的996就变成了一种形式，一种过场，一种强制性的无偿加班行为。大部分企业学会了996，却没有明白自己为什么要996。也许大公司这样做是自己这样做的唯一原因，好像自己企业996了之后就朝成功迈进了一步。
+>“进入移动互联网之后，软件项目的迭代速度和节奏变得越来越快。大公司首当其冲的感受到了大浪潮带来的紧迫感。996的本质其实是要让大家在一段时间内神经紧绷，集中式的闭关攻克某些技术难题或者开发新产品，这其实是完全符合移动互联网或者说这个时代的发展。
+
+但历史永远都是相似的，企业和老板都愿意无脑模仿成功者，然而拷贝永远都是走样的。慢慢的996就变成了一种形式，一种过场，一种强制性的无偿加班行为。大部分企业学会了996，却没有明白自己为什么要996。也许大公司这样做是自己这样做的唯一原因，好像自己企业996了之后就朝成功迈进了一步。
 
 
 瘟疫
