--- a/通用篇——网路人设.md
+++ b/通用篇——网路人设.md
@@ -1,29 +1,39 @@
   在微博上有一个经常被提到的词——“人设”。有的网红是故意卖人设，在当下社会无论你卖好还是卖坏，都有人买单。不知什么时候所有的负面消息都能够拿来被炒作，甚至还能造成正面影响，这可能真的要归功于公关这样一个强大的职业。当然无论是否卖人设，每个人在现实生活中就拥有自己的人设，进入网络之后则会出现网络上的人设。就如同本书的中心思想，现实和网络保持相同人设和不同人设的群体应该也是五五开的状态，拥有相同人设的人一般都比较真实和优秀。而不同人设的人除了为了利益和虚荣心必须在网络上营造新的人设以外，剩下的基本上都是在网络上无限的放大自己没有却很想有的东西，可以认为是一种放飞自我吧。
 
   但纵观全局，网络上的人设其实只有四类——“正常人”、“打肿脸的胖子”、“杠精”和“小人”。
-正常人：无论喜怒哀乐，低调还是放飞自我，网络与现实人设是否相同，始终贯彻自己怎么想就怎么说这样一个原则。
-胖子：2019年柠檬这个表情火了，网络上柠檬的表情意味着“酸”，也就是羡慕的意思。胖子型人设在网络上的言论就是故意营造一种让别人柠檬的样子，别人越柠檬胖子越开心。
-杠精：杠精已经成为了网络的主力军。没有人知道杠精的心态，也许是为了填补自己心中某一个空缺吧。答非所问、没事找事是杠精具备的主动技能。巨婴也归为该类
-小人：“举报”和“落井下石”是小人的主动技能，“玻璃心”则是被动技能。小人往往自己过的并不好，日常都以哗众取宠和嫉妒他人为生。他们唯恐天下不乱，对身边的人也是抱着“坑害一个是一个”的心态。
+  
+* 正常人：无论喜怒哀乐，低调还是放飞自我，网络与现实人设是否相同，始终贯彻自己怎么想就怎么说这样一个原则。
+* 胖子：2019年柠檬这个表情火了，网络上柠檬的表情意味着“酸”，也就是羡慕的意思。胖子型人设在网络上的言论就是故意营造一种让别人柠檬的样子，别人越柠檬胖子越开心。
+* 杠精：杠精已经成为了网络的主力军。没有人知道杠精的心态，也许是为了填补自己心中某一个空缺吧。答非所问、没事找事是杠精具备的主动技能。巨婴也归为该类
+* 小人：“举报”和“落井下石”是小人的主动技能，“玻璃心”则是被动技能。小人往往自己过的并不好，日常都以哗众取宠和嫉妒他人为生。他们唯恐天下不乱，对身边的人也是抱着“坑害一个是一个”的心态。
 
 这些角色其实不仅仅存在于网络上，很多人在现实中的人格已经被其网络人设吞噬了。
 
   那么我们怎么来判断这些人设呢？其实还是比较简单的，我们来举个例子，比如现在上海都在实施垃圾分类，某一天你不小心把某个湿垃圾归类到干垃圾去了，按照上述人设我们可以来看下对应可能的情况。
 
-正常人的心声：
-“垃圾分类首先是要学会分类，但类型太多了，很容易搞错”
-“我也经常会搞错”
-“下次要注意了”
+>正常人的心声：
 
-胖子的心声：
-“垃圾分类我从来不管，因为我每个月花几万人民币专门请人进行分类“
-“我也经常会分错，这个垃圾多少钱，那个垃圾多少钱，谁来教教我应该怎么分类”
-“我从来不在家，都是全球旅行的，不用分类，真舒心”
+>“垃圾分类首先是要学会分类，但类型太多了，很容易搞错”
 
-杠精的心声：
-“垃圾分类都不会，就一个智障”
-“垃圾分类太容易了，能吃的都是湿垃圾，不能吃的都是干垃圾”
-“每天产生那么多垃圾，真恶心”
+>“我也经常会搞错”
+
+>“下次要注意了”
+
+>胖子的心声：
+
+>“垃圾分类我从来不管，因为我每个月花几万人民币专门请人进行分类“
+
+>“我也经常会分错，这个垃圾多少钱，那个垃圾多少钱，谁来教教我应该怎么分类”
+
+>“我从来不在家，都是全球旅行的，不用分类，真舒心”
+
+>杠精的心声：
+
+>“垃圾分类都不会，就一个智障”
+
+>“垃圾分类太容易了，能吃的都是湿垃圾，不能吃的都是干垃圾”
+
+>“每天产生那么多垃圾，真恶心”
 
 说到这里有人就要问了，好像哪里不对呀，我扔错个垃圾，怎么大家就都知道了，这就是要归功于举报小能手“小人”角色。一般来讲小人这个角色主要以你身边的人居多，也是最不容易发现的一类。胖子属于炫耀型人格，杠精属于无脑喷子，日常很容易分辨。但小人真的很麻烦，往往只有东窗事发了，你才能看清他们的真面目，才会明白其实根本就不值得交这类朋友。正因为有他们，任何事情都会成为大字报被添油加醋的宣传出去。
 
