--- a/通用篇——网路人设.md
+++ b/通用篇——网路人设.md
@@ -11,7 +11,7 @@
 
   那么我们怎么来判断这些人设呢？其实还是比较简单的，我们来举个例子，比如现在上海都在实施垃圾分类，某一天你不小心把某个湿垃圾归类到干垃圾去了，按照上述人设我们可以来看下对应可能的情况。
 
->正常人的心声：
+正常人的心声：
 
 >“垃圾分类首先是要学会分类，但类型太多了，很容易搞错”
 
@@ -19,7 +19,7 @@
 
 >“下次要注意了”
 
->胖子的心声：
+胖子的心声：
 
 >“垃圾分类我从来不管，因为我每个月花几万人民币专门请人进行分类“
 
@@ -27,7 +27,7 @@
 
 >“我从来不在家，都是全球旅行的，不用分类，真舒心”
 
->杠精的心声：
+杠精的心声：
 
 >“垃圾分类都不会，就一个智障”
 
